tests/baselines/reference/propertyAccessOnTypeParameterWithConstraints4.errors.txt
==== tests/cases/compiler/propertyAccessOnTypeParameterWithConstraints4.ts (4 errors) ====
    class C<T extends Date> {
        f() {
            var x: T;
            var a = x['notHere'](); // should be string
            return a + x.notHere();
                         ~~~~~~~
!!! propertyAccessOnTypeParameterWithConstraints4.ts(5,22): error TS2094: The property 'notHere' does not exist on value of type 'T'.
        }
    }
    
    var r = (new C<Date>()).f();
    
    interface I<T extends Date> {
        foo: T;
    }
    var i: I<Date>;
    var r2 = i.foo.notHere();
                   ~~~~~~~
!!! propertyAccessOnTypeParameterWithConstraints4.ts(15,16): error TS2094: The property 'notHere' does not exist on value of type 'Date'.
    var r2b = i.foo['notHere']();
    
    var a: {
        <T extends Date>(): T;
    }
    var r3: string = a().notHere();
                         ~~~~~~~
!!! propertyAccessOnTypeParameterWithConstraints4.ts(21,22): error TS2094: The property 'notHere' does not exist on value of type 'Date'.
    var r3b: string = a()['notHere']();
    
    var b = {
        foo: <T extends Date>(x: T): T => {
            var a = x['notHere'](); // should be string
            return a + x.notHere();
                         ~~~~~~~
!!! propertyAccessOnTypeParameterWithConstraints4.ts(27,22): error TS2094: The property 'notHere' does not exist on value of type 'T'.
        },
        bar: b.foo().notHere()
    }
    
    var r4 = b.foo(new Date());